@@ -1,3 +1,7 @@
+Thu Aug 05 15:39:17 2004  George Lebl <jirka@5z.com>
+
+	* gtkextra/gtkplot.c: replace sprintf with g_snprintf
+
 Thu Aug 05 02:14:15 2004  George Lebl <jirka@5z.com>
 
 	* src/graphing.c: when plotting surfaces, the expression may return
